[gd_scene load_steps=15 format=3 uid="uid://w1a4xvu7mi5k"]

[ext_resource type="Script" uid="uid://vhiafiidc3rd" path="res://scripts/player.gd" id="1_wqvx2"]
[ext_resource type="Texture2D" uid="uid://b5j6sd1l022wa" path="res://Art Assests/Weapons/wand/wizard-penguin.png" id="2_q8djv"]
[ext_resource type="PackedScene" uid="uid://c6cu6ujapeppi" path="res://scenes/slot.tscn" id="2_qlg0r"]
[ext_resource type="Resource" uid="uid://cffauw855yprs" path="res://Resources/Weapons/Fire Wand.tres" id="3_tuyoq"]
[ext_resource type="Resource" uid="uid://dn7vcpn06nt34" path="res://Resources/Weapons/blast.tres" id="4_qlg0r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63wj2"]
atlas = ExtResource("2_q8djv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7glgm"]
atlas = ExtResource("2_q8djv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_031hx"]
atlas = ExtResource("2_q8djv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj3i7"]
atlas = ExtResource("2_q8djv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc0om"]
atlas = ExtResource("2_q8djv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uorc5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63wj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_031hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj3i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc0om")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ba54t"]
radius = 7.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 8.0
height = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8djv"]
bg_color = Color(0.293239, 0.704524, 0.253196, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.2

[node name="PlayerHuman" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_wqvx2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Weapons" type="HBoxContainer" parent="UI"]
offset_right = 30.0
offset_bottom = 30.0

[node name="Slot" parent="UI/Weapons" instance=ExtResource("2_qlg0r")]
layout_mode = 2
weapon = ExtResource("3_tuyoq")

[node name="Slot2" parent="UI/Weapons" instance=ExtResource("2_qlg0r")]
layout_mode = 2
weapon = ExtResource("4_qlg0r")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uorc5")
autoplay = "default"
frame = 4
frame_progress = 0.0895145

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ba54t")

[node name="Camera2D" type="Camera2D" parent="."]
limit_smoothed = true

[node name="SelfDamage" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="SelfDamage"]
unique_name_in_owner = true
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_dqkch")
debug_color = Color(0.92607, 0.250785, 0.273463, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -12.0
offset_top = -21.0
offset_right = 12.0
offset_bottom = -17.0
theme_override_styles/fill = SubResource("StyleBoxFlat_q8djv")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="SelfDamage" to="." method="_on_self_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
